# PyMMT

./: .gitignore  README.md  pyproject.toml
src/: test.py
src/pymmt/: __init__.py  pymmt.py
src/pymmt/instruments/: MMTCam.py  binospec.py  mmirs.py
